--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="header-section">
+            <div class="header">
+                <p>Header Logo</p>
+                <a>header link one</a>
+                <a>header link two</a>
+                <a>header link three</a>
+            </div>
+            <div class="header-section-content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and color is low contrast.</p>
+                <button>Sign up</button>
+                <img src="ph.png" alt="this is a placeholder for an image">
+            </div>
+        </div>
+
+        <div class="Information">
+            <h1>Some images of Mohammed Salah (footballer).</h1>
+            <div class="images">
+
+                <img src="img1.png" alt="An image">
+                <p>This is some subtext under an illustration or image.</p>
+
+                <img src="img2.png" alt="An image">
+                <p>This is some subtext under an illustration or image.</p>
+
+                <img src="img3.png" alt="An image">
+                <p>This is some subtext under an illustration or image.</p>
+
+                <img src="img4.png" alt="An image">
+                <p>This is some subtext under an illustration or image.</p>
+
+            </div>
+        </div>
+
+        <div class="quote-section">
+            <p>From the first day I left Chelsea, it was always in my mind to make them wrong. I made them wrong.</p>
+            <p>Mohammed Salah</p>
+        </div>
+
+        <div class="ad-section">
+            <div class="ad-banner">
+                <h1>Call to action! it's time!</h1>
+                <p>Sign up for our product by clicking that button over there!</p>
+                <button>Sign up</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            <p>copyright © The Odin Project 2021</p>
+        </div>
     </body>
 </html>
