Finished styling the header(main) section

--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
     <body>
         <div class="header-section">
             <div class="header">
-                <p>Header Logo</p>
-                <a>header link one</a>
-                <a>header link two</a>
-                <a>header link three</a>
+                <div class="logo">
+                    <p>Header Logo</p>
+                </div>
+                <div class="links">
+                    <a>header link one</a>
+                    <a>header link two</a>
+                    <a>header link three</a>
+                </div>
             </div>
             <div class="header-section-content">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and color is low contrast.</p>
-                <button>Sign up</button>
-                <img src="ph.png" alt="this is a placeholder for an image">
+                <div class="hero-left">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and color is low contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="hero-img">
+                    <img src="ph.png" alt="this is a placeholder for an image">
+                </div>
             </div>
         </div>
 
         <div class="Information">
-            <h1>Some images of Mohammed Salah (footballer).</h1>
+            <h1>Some random Information.</h1>
             <div class="images">
 
                 <img src="img1.png" alt="An image">
