Completed upto quote section

--- a/index.html
+++ b/index.html
@@ -30,28 +30,35 @@
             </div>
         </div>
 
-        <div class="Information">
-            <h1>Some random Information.</h1>
+        <div class="information">
+            <p class="info-text">Some random Information.</p>
             <div class="images">
+                <div class="img-t">
+                    <div class="img-div"></div>
+                    <p>This is some subtext under an illustration or image.</p>
+                </div>
 
-                <img src="img1.png" alt="An image">
-                <p>This is some subtext under an illustration or image.</p>
+                <div class="img-t">
+                    <div class="img-div"></div>
+                    <p>This is some subtext under an illustration or image.</p>
+                </div>
 
-                <img src="img2.png" alt="An image">
-                <p>This is some subtext under an illustration or image.</p>
+                <div class="img-t">
+                    <div class="img-div"></div>
+                    <p>This is some subtext under an illustration or image.</p>
+                </div>
 
-                <img src="img3.png" alt="An image">
-                <p>This is some subtext under an illustration or image.</p>
-
-                <img src="img4.png" alt="An image">
-                <p>This is some subtext under an illustration or image.</p>
+                <div class="img-t">
+                    <div class="img-div"></div>
+                    <p>This is some subtext under an illustration or image.</p>
+                </div>
 
             </div>
         </div>
 
         <div class="quote-section">
             <p>From the first day I left Chelsea, it was always in my mind to make them wrong. I made them wrong.</p>
-            <p>Mohammed Salah</p>
+            <p id="author">-Mohammed Salah</p>
         </div>
 
         <div class="ad-section">
