Completed the page

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 
         <div class="ad-section">
             <div class="ad-banner">
-                <h1>Call to action! it's time!</h1>
-                <p>Sign up for our product by clicking that button over there!</p>
+                <div class="ad-text">
+                    <h1>Call to action! it's time!</h1>
+                    <p>Sign up for our product by clicking that button over there!</p>
+                </div>
                 <button>Sign up</button>
             </div>
         </div>
